--- a/composer.json
+++ b/composer.json
@@ -51,7 +51,8 @@
         "symfony/webpack-encore-bundle": "^1.12",
         "symfony/workflow": "5.4.*",
         "symfony/yaml": "5.4.*",
-        "twig/extra-bundle": "^2.12|^3.0",
+        "twig/extra-bundle": "^3.3",
+        "twig/string-extra": "^3.3",
         "twig/twig": "^2.12|^3.0"
     },
     "config": {
