Updated composer.json with cache clear.

--- a/composer.json
+++ b/composer.json
@@ -89,6 +89,7 @@
         },
         "post-install-cmd": [
             "@auto-scripts",
+            "php bin/console c:c",
             "php bin/console d:s:d --force",
             "php bin/console d:s:c",
             "php bin/console d:f:l --no-interaction"
