--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "build": "encore production --progress"
     },
     "dependencies": {
+        "angular": "^1.8.2",
         "jquery": "^3.6.0"
     }
 }
